api-pix/k8s/ingress-pix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pix-ingress
  namespace: pix-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pix-api-service
                port:
                  number: 80
